--- a/tensorflow/compiler/xla/service/gpu/BUILD
+++ b/tensorflow/compiler/xla/service/gpu/BUILD
@@ -719,6 +719,7 @@ cc_library(
         "outfeed_thunk.cc",
         "replica_id_thunk.cc",
         "sequential_thunk.cc",
+        "swap_thunk.cc", 
         "thunk_schedule.cc",
         "triangular_solve_thunk.cc",
         "while_thunk.cc",
@@ -742,6 +743,7 @@ cc_library(
         "outfeed_thunk.h",
         "replica_id_thunk.h",
         "sequential_thunk.h",
+        "swap_thunk.h", 
         "thunk_schedule.h",
         "triangular_solve_thunk.h",
         "while_thunk.h",
@@ -789,6 +791,7 @@ cc_library(
         "//tensorflow/compiler/xla:types",
         "//tensorflow/compiler/xla:util",
         "//tensorflow/compiler/xla:xla_data_proto_cc",
+        "//tensorflow/compiler/xla/pjrt:pjrt_gpu_swap", 
         "//tensorflow/compiler/xla/service:buffer_assignment",
         "//tensorflow/compiler/xla/service:custom_call_status_internal",
         "//tensorflow/compiler/xla/service:executable",
