add gradient accumulation rewrite

--- a/tensorflow/compiler/xla/service/spmd/BUILD
+++ b/tensorflow/compiler/xla/service/spmd/BUILD
@@ -167,6 +167,18 @@ cc_library(
 )
 
 cc_library(
+    name = "grad_acc_rewrite",
+    srcs = ["grad_acc_rewrite.cc"],
+    hdrs = ["grad_acc_rewrite.h"],
+    deps = [
+        "//tensorflow/compiler/xla:shape_util",
+        "//tensorflow/compiler/xla/service:hlo",
+        "//tensorflow/compiler/xla/service:hlo_pass",
+        "//tensorflow/compiler/xla/service:pass_context",
+    ],
+)
+
+cc_library(
     name = "slice_auto_sharded_stages",
     srcs = ["slice_auto_sharded_stages.cc"],
     hdrs = ["slice_auto_sharded_stages.h"],
@@ -174,7 +186,6 @@ cc_library(
         "//tensorflow/compiler/xla:shape_util",
         "//tensorflow/compiler/xla/service:hlo",
         "//tensorflow/compiler/xla/service:hlo_pass",
-        "//tensorflow/compiler/xla/service:pass_context",
         "@pybind11",
     ],
 )
