--- a/tensorflow/compiler/xla/service/BUILD
+++ b/tensorflow/compiler/xla/service/BUILD
@@ -6166,6 +6166,34 @@ xla_py_proto_library(
 )
 
 cc_library(
+    name = "identity_remover",
+    srcs = [
+        "identity_remover.cc",
+    ],
+    hdrs = [
+        "identity_remover.h",
+    ],
+    deps = [
+        ":hlo",
+        ":hlo_pass",
+    ],
+)
+
+cc_library(
+    name = "remat_identity_fixer",
+    srcs = [
+        "remat_identity_fixer.cc",
+    ],
+    hdrs = [
+        "remat_identity_fixer.h",
+    ],
+    deps = [
+        ":hlo",
+        ":hlo_pass",
+    ],
+)
+
+cc_library(
     name = "pass_context",
     srcs = [
         "pass_context.cc",
