--- a/tensorflow/compiler/xla/service/gpu/BUILD
+++ b/tensorflow/compiler/xla/service/gpu/BUILD
@@ -2493,8 +2493,10 @@ cc_library(
         "gpu_cost_model.h",
     ],
     deps = [
+        ":backend_configs_cc",
+        ":ir_emission_utils",
         "//tensorflow/compiler/xla/service:hlo",
         "//tensorflow/compiler/xla/service:pass_context",
-        "//tensorflow/compiler/xla/service/gpu:ir_emission_utils",
+        "//tensorflow/compiler/xla/service/spmd:auto_sharding",
     ],
 )
