Hlo cost model part 2 : estimate the cost of a HloModule (#74)
* add hlo_cost_model.cc

* gpu cost model

* Support dot

* fix parameter partitioning

--- a/tensorflow/compiler/xla/service/gpu/BUILD
+++ b/tensorflow/compiler/xla/service/gpu/BUILD
@@ -2657,3 +2657,20 @@ cc_library(
         "//tensorflow/compiler/xla/service:hlo_pass",
     ],
 )
+
+cc_library(
+    name = "gpu_cost_model",
+    srcs = [
+        "gpu_cost_model.cc",
+    ],
+    hdrs = [
+        "gpu_cost_model.h",
+    ],
+    deps = [
+        ":backend_configs_cc",
+        ":ir_emission_utils",
+        "//tensorflow/compiler/xla/service:hlo",
+        "//tensorflow/compiler/xla/service:pass_context",
+        "//tensorflow/compiler/xla/service/spmd:auto_sharding",
+    ],
+)
