Fix errors after rebase

--- a/tensorflow/compiler/xla/service/gpu/BUILD
+++ b/tensorflow/compiler/xla/service/gpu/BUILD
@@ -1622,7 +1622,6 @@ cc_library(
     deps = [
         ":alias_passthrough_params",
         ":all_reduce_blueconnect",
-        ":auto_sharding",
         ":cudnn_batchnorm_rewriter",
         ":common_computation_elimination",
         ":fusion_bitcast_lift",
@@ -2564,6 +2563,37 @@ cc_library(
     ],
 )
 
+cc_library(
+    name = "common_computation_elimination",
+    srcs = [
+        "common_computation_elimination.cc",
+    ],
+    hdrs = [
+        "common_computation_elimination.h",
+    ],
+    deps = [
+        "//tensorflow/compiler/xla/service:hlo",
+        "//tensorflow/compiler/xla/service:hlo_pass",
+    ],
+)
+
+cc_library(
+    name = "gpu_cost_model",
+    srcs = [
+        "gpu_cost_model.cc",
+    ],
+    hdrs = [
+        "gpu_cost_model.h",
+    ],
+    deps = [
+        ":backend_configs_cc",
+        ":cublas_cudnn",
+        "//tensorflow/compiler/xla/service:hlo",
+        "//tensorflow/compiler/xla/service:pass_context",
+        "//tensorflow/compiler/xla/service/spmd:auto_sharding",
+    ],
+)
+
 # TODO(b/187959015): Expand test patterns; see cl/377552996.
 test_suite(
     name = "bef_thunk_tests",
@@ -2643,34 +2673,5 @@ test_suite(
         "//tensorflow/compiler/xla/tests:multioutput_fusion_test_gpu",
         "//tensorflow/compiler/xla/tests:scatter_test_gpu",
         "//tensorflow/compiler/xla/tests:triangular_solve_test_gpu",
-
-cc_library(
-    name = "common_computation_elimination",
-    srcs = [
-        "common_computation_elimination.cc",
-    ],
-    hdrs = [
-        "common_computation_elimination.h",
-    ],
-    deps = [
-        "//tensorflow/compiler/xla/service:hlo",
-        "//tensorflow/compiler/xla/service:hlo_pass",
-    ],
-)
-
-cc_library(
-    name = "gpu_cost_model",
-    srcs = [
-        "gpu_cost_model.cc",
-    ],
-    hdrs = [
-        "gpu_cost_model.h",
-    ],
-    deps = [
-        ":backend_configs_cc",
-        ":ir_emission_utils",
-        "//tensorflow/compiler/xla/service:hlo",
-        "//tensorflow/compiler/xla/service:pass_context",
-        "//tensorflow/compiler/xla/service/spmd:auto_sharding",
     ],
 )
