Add changes under tensorflow/compiler/xla/service/gpu/*

--- a/tensorflow/compiler/xla/service/gpu/BUILD
+++ b/tensorflow/compiler/xla/service/gpu/BUILD
@@ -578,6 +578,8 @@ cc_library(
         "replica_id_thunk.cc",
         "sequential_thunk.cc",
         "while_thunk.cc",
+        # Added by Alpa
+        "rng_thunk.cc",
     ],
     hdrs = [
         "conditional_thunk.h",
@@ -594,6 +596,8 @@ cc_library(
         "replica_id_thunk.h",
         "sequential_thunk.h",
         "while_thunk.h",
+        # Added by Alpa
+        "rng_thunk.h",
     ],
     deps = [
         ":backend_configs_cc",
@@ -2962,5 +2966,81 @@ tf_cc_test(
         "//tensorflow/compiler/xla/service:hlo_matchers",
         "//tensorflow/compiler/xla/tests:hlo_test_base",
         "//tensorflow/compiler/xla/tests:xla_internal_test_main",
+    ],
+)
+
+# Added by Alpa
+alias(
+    name = "alpa_nccl_wrapper",
+    actual = if_nccl(":_alpa_nccl_wrapper", ":empty"),
+)
+
+tf_cuda_library(
+    name = "_alpa_nccl_wrapper",
+    srcs = if_gpu_is_configured(["alpa_nccl_wrapper.cc"]),
+    hdrs = if_gpu_is_configured(["alpa_nccl_wrapper.h"]),
+    # Override tf_cuda_library()'s internal default value of ["//buildenv/target:gce"].
+    copts = [
+        "-fexceptions",
+        # "-fno-strict-aliasing",
+    ],
+    compatible_with = [],
+    defines = if_gpu_is_configured(["XLA_ENABLE_XCCL"]),
+    tags = ["manual"],  # Only builds with if_nccl().
+    deps = if_gpu_is_configured([
+        ":gpu_executable_run_options",
+        "@com_google_absl//absl/time",
+        "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/strings:str_format",
+        "@com_google_absl//absl/synchronization",
+        "//tensorflow/compiler/xla:debug_options_flags",
+        "//tensorflow/compiler/xla:status",
+        "//tensorflow/compiler/xla:status_macros",
+        "//tensorflow/compiler/xla:statusor",
+        "//tensorflow/compiler/xla:xla_data_proto_cc",
+        "//tensorflow/compiler/xla/service:collective_ops_utils",
+        "//tensorflow/compiler/xla/service:global_device_id",
+        "//tensorflow/compiler/xla/pjrt/distributed:client",
+        "//tensorflow/compiler/xla/pjrt:pjrt_client",
+        "//tensorflow/compiler/xla/pjrt:tfrt_cpu_pjrt_client",
+        "//tensorflow/compiler/xla/python:py_client",
+        "//tensorflow/compiler/xla/tools:driver",
+        "//tensorflow/core:lib",
+        "@pybind11",
+    ]) + if_cuda_is_configured([
+        "@local_config_nccl//:nccl",
+    ]) + if_rocm_is_configured([
+        "@local_config_rocm//rocm:rccl",
+    ]),
+)
+
+cc_library(
+    name = "common_computation_elimination",
+    srcs = [
+        "common_computation_elimination.cc",
+    ],
+    hdrs = [
+        "common_computation_elimination.h",
+    ],
+    deps = [
+        "//tensorflow/compiler/xla/service:hlo",
+        "//tensorflow/compiler/xla/service:hlo_pass",
+    ],
+)
+
+cc_library(
+    name = "gpu_cost_model",
+    srcs = [
+        "gpu_cost_model.cc",
+    ],
+    hdrs = [
+        "gpu_cost_model.h",
+    ],
+    deps = [
+        ":backend_configs_cc",
+        ":ir_emission_utils",
+        "//tensorflow/compiler/xla/service:hlo",
+        "//tensorflow/compiler/xla/service:pass_context",
+        "//tensorflow/compiler/xla/service/spmd:auto_sharding",
     ],
 )
