Add changes under tensorflow/compiler/xla/service/*

--- a/tensorflow/compiler/xla/service/BUILD
+++ b/tensorflow/compiler/xla/service/BUILD
@@ -2950,6 +2950,7 @@ cc_library(
 
         # Added by Alpa
         ":pass_context",
+        "//tensorflow/compiler/xla/service/spmd:grad_acc_rewrite",
     ],
 )
 
